src/objects/Apttus_Config2__BannerSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to display content (formatted text or Image URL) on blank intermediate pages</description>
    <fields>
        <fullName>Apttus_Config2__BannerMessageContext__c</fullName>
        <description>Identifies message fragments to display on intermediate page. The &apos;Progressbar&apos; context displays right below the progress bar and &apos;Marketing&apos; context display at the middle of the page.</description>
        <inlineHelpText>Allow values:
Progressbar
Marketing

If the page context is &apos;Progressbar&apos;, BannerType must be &apos;CustomLabel&apos;</inlineHelpText>
        <label>BannerMessageContext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BannerPageContext__c</fullName>
        <description>Identifies intermediate page to display revevant progressbar, marketing messages</description>
        <inlineHelpText>Allowed values:
Pricing
Catalog</inlineHelpText>
        <label>BannerPageContext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BannerSource__c</fullName>
        <description>Display content - text/image URL</description>
        <label>BannerSource</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BannerType__c</fullName>
        <description>Type of banner display type. Allowed values are ImageURL, CustomLabel - a display helper property</description>
        <inlineHelpText>Allowed values: 
ImageURL
CustomLabel</inlineHelpText>
        <label>BannerType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Sequence number for the display banner content</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Config Banner Settings</label>
</CustomObject>